cimai/include/cimai/chart_parser.h

#pragma once
#include <cimai/simai_types.h>

void cimai_parse_chart(SimaiChart *chart);
void cimai_chart_free(SimaiChart **chart);